Actualizacion header y main

--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <div>
+                <h1>Bienvenido a mi pagina web</h1>
+                <p>Aqui encontraras la mejor informacion</p>
+                <a href="#">Empezar ahora</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
