Definicion de estilos css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arte urbano</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
+        <nav class="container">
+            <ul class="list">
                 <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">HTML</a></li>
             </ul>
         </nav>
     </header>
